@@ -44,8 +44,9 @@ public record JVMPath(Path path) implements PathLike {
     private Path toPath(PathLike other) {
         final var names = other.streamNames().toList();
         if (names.isEmpty()) {
-            return Path.of("");
+            return Paths.get("");
         }
+
         final var first = Paths.get(names.getFirst());
         return names.subList(1, names.size())
                 .stream()
